...
                                        }
                                    }
                                }
                                .accessibilityIdentifier("searchImage_\(post.id)")
                        }
                    }
                    .accessibilityIdentifier("gridCollectionView")
                    .searchable(text: $viewModel.searchText, prompt: "Search ...")
                    .onChange(of: viewModel.debounceSearchText) { _, newValue in
                        Task { await viewModel.fetchImages(newValue) }
                    }
                }
                .opacity(viewModel.selectedPost == nil ? 1 : 0)
...
