...
                                Image(systemName: "square.and.arrow.up")
                                    .foregroundStyle(.red)
                                    .padding()
                                    .background(Color.white)
                                    .clipShape(Circle())
                            }
                            .accessibilityIdentifier("ShareSheetButtonIdentifier")
                            .accessibilityAddTraits(.isToggle)
                        }
                        .padding(.top, 35)
                        .padding(.horizontal)
                    }
                }
...
